--- a/app/src/main/res/layout/item_year.xml
+++ b/app/src/main/res/layout/item_year.xml
@@ -60,6 +60,21 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvYearTitle" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <ImageButton
+            android:id="@+id/btnYearSettings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:background="#00FF0101"
+            android:contentDescription="@string/Description"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            android:scaleType="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/settings_icon" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
